--- a/Todo-app/docker-compose.yml
+++ b/Todo-app/docker-compose.yml
@@ -83,6 +83,18 @@ services:
             - '/dev/shm:/dev/shm'
         networks:
             - sail
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        links:
+            - mysql:mysql
+        ports:
+            - 8080:80
+        environment:
+            MYSQL_USERNAME: '${DB_USERNAME}'
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            PMA_HOST: mysql
+        networks:
+            - sail
 networks:
     sail:
         driver: bridge
@@ -93,3 +105,6 @@ volumes:
         driver: local
     sailmeilisearch:
         driver: local
+    phpmyadmin:
+        driver: local
+
